--- a/Herbal/res/layout/activity_main.xml
+++ b/Herbal/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/background_green"
-    tools:context=".MainActivity" >
+    tools:context=".LoginActivity" >
 
     <TextView
         android:layout_width="wrap_content"
