--- a/Herbal/res/layout/dashboard.xml
+++ b/Herbal/res/layout/dashboard.xml
@@ -1,23 +1,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/dashboard_tmp"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/background_white"
     tools:context=".DashboardActivity" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+    <ImageView
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="100dp"
-        android:layout_marginRight="74dp"
-        android:background="@null"
-        android:onClick="clickCut" />
+        android:adjustViewBounds="true"
+        android:src="@drawable/footer" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="82.5dp"
+        android:layout_height="92.7dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="102dp"
+        android:src="@drawable/herbal_green" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/footer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="50dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/login_button" />
 
 </RelativeLayout>
