--- a/Herbal/res/layout/result.xml
+++ b/Herbal/res/layout/result.xml
@@ -13,6 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             android:src="@drawable/result_head_button_empty" />
 
