--- a/Herbal/res/layout/symptom.xml
+++ b/Herbal/res/layout/symptom.xml
@@ -8,6 +8,8 @@
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         android:src="@drawable/symptom_01" />
 
 </LinearLayout>
