--- a/Herbal/res/layout/symptom.xml
+++ b/Herbal/res/layout/symptom.xml
@@ -5,7 +5,7 @@
     android:background="@color/background_white" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/perscription"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
