--- a/Herbal/res/values-v14/styles.xml
+++ b/Herbal/res/values-v14/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme for API 14+. This theme completely replaces
@@ -10,9 +10,11 @@
     <style name="Theme.MyAppTheme" parent="android:style/Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/Theme.MyAppTheme.ActionBar</item>
         <item name="android:actionMenuTextColor">#DCDCDC</item>
+        <item name="android:actionBarSize">70dp</item>
     </style>
 
     <style name="Theme.MyAppTheme.ActionBar" parent="android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:height">70dp</item>
         <item name="android:background">#C0C656</item>
         <item name="android:titleTextStyle">@style/Theme.MyAppTheme.ActionBar.Title</item>
     </style>
