fix ui bug, surfaeview will fill linearlayout to the full

--- a/Herbal/res/layout/measure.xml
+++ b/Herbal/res/layout/measure.xml
@@ -2,11 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_white" >
+    android:background="@drawable/background_black" >
 
     <SurfaceView
         android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="100dp" />
 
 </LinearLayout>
