--- a/Herbal/res/layout/symptom.xml
+++ b/Herbal/res/layout/symptom.xml
@@ -10,6 +10,6 @@
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/perscription_01" />
+        android:src="@drawable/perscription01" />
 
 </LinearLayout>
