--- a/Herbal/res/values/color.xml
+++ b/Herbal/res/values/color.xml
@@ -3,6 +3,7 @@
 
     <color name="background_green">#C0C656</color>
     <color name="background_white">#EAE9E9</color>
-	<color name="white">#FFFFFF</color>
-	<color name="transparent">#80000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="text_price">#8E8A3B</color>
+
 </resources>
