--- a/Herbal/res/layout/shop.xml
+++ b/Herbal/res/layout/shop.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,6 +6,7 @@
     android:orientation="vertical" >
 
     <RelativeLayout
+        android:id="@+id/shop_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -57,7 +58,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_below="@+id/shop_top" >
 
         <RelativeLayout
             android:id="@+id/tray_parent"
@@ -98,4 +100,13 @@
         </RelativeLayout>
     </RelativeLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_below="@+id/shop_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/shop_shadow" />
+
+</RelativeLayout>
