--- a/Herbal/res/layout/herbal_detail.xml
+++ b/Herbal/res/layout/herbal_detail.xml
@@ -1,10 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/herbal_ashitaba_detail"
-    android:orientation="vertical"
-     >
+    android:layout_height="match_parent" >
+
+    <ImageView
+        android:id="@+id/herbal_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/herbal_ashitaba_detail" />
 
     <Button
         android:id="@+id/detail_back_button"
