--- a/Herbal/res/layout/shop.xml
+++ b/Herbal/res/layout/shop.xml
@@ -67,6 +67,7 @@
             android:layout_height="match_parent" >
 
             <LinearLayout
+                android:id="@+id/shop_herbal_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="30dp"
@@ -102,9 +103,9 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_below="@+id/shop_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/shop_top"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:src="@drawable/shop_shadow" />
