--- a/Herbal/res/layout/measure.xml
+++ b/Herbal/res/layout/measure.xml
@@ -6,10 +6,10 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
+        android:layout_marginRight="90dp"
         android:scaleType="centerCrop"
         android:src="@drawable/measure_progress" />
 
@@ -32,6 +32,6 @@
         android:id="@+id/chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_black" />
+        />
 
 </LinearLayout>
