--- a/Herbal/res/layout/confirm.xml
+++ b/Herbal/res/layout/confirm.xml
@@ -18,6 +18,7 @@
             android:src="@drawable/confirm_background_top" />
 
         <LinearLayout
+            android:id="@+id/herbal_carts"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_centerHorizontal="true"
@@ -76,7 +77,7 @@
         android:adjustViewBounds="true"
         android:src="@drawable/confirm_input_people" />
 	<ImageView
-        android:id="@+id/input_phons"
+        android:id="@+id/input_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/input_people"
@@ -87,6 +88,7 @@
         android:id="@+id/input_serial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/input_phone"
         android:adjustViewBounds="true"
         android:src="@drawable/confirm_input_serial" />
     
@@ -94,6 +96,7 @@
         android:id="@+id/button_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/input_serial"
         android:layout_alignParentBottom="true"
         android:adjustViewBounds="true"
         android:src="@drawable/confirm_button_confirm" />
