--- a/Herbal/res/layout/shop.xml
+++ b/Herbal/res/layout/shop.xml
@@ -17,8 +17,7 @@
             android:layout_centerVertical="true"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/shop_button_empty" />
-
+            android:src="@drawable/shop_button_1"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
