enable facebook login

--- a/Herbal/res/layout/dashboard.xml
+++ b/Herbal/res/layout/dashboard.xml
@@ -33,6 +33,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:adjustViewBounds="true"
+        android:onClick="login"
         android:src="@drawable/login_button" />
 
 </RelativeLayout>
