--- a/Herbal/res/layout/measure.xml
+++ b/Herbal/res/layout/measure.xml
@@ -14,7 +14,7 @@
         android:src="@drawable/measure_progress" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/bmpTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
