--- a/Herbal/res/layout/measure.xml
+++ b/Herbal/res/layout/measure.xml
@@ -8,8 +8,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
         android:layout_marginRight="90dp"
+        android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:src="@drawable/measure_progress" />
 
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
-        android:text="80"
+        android:text="0"
         android:textSize="150sp" />
 
     <ImageView
@@ -32,6 +32,7 @@
         android:id="@+id/chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:layout_marginLeft="200dp"
+        android:layout_marginRight="200dp" />
 
 </LinearLayout>
