build main UI-flow structure, adding static files

--- a/herbal2/res/layout/activity_result.xml
+++ b/herbal2/res/layout/activity_result.xml
@@ -1,20 +1,51 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C3Cf51"
     tools:context=".ResultActivity" >
 
     <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" />
 
-    <ImageView
-        android:id="@+id/result_image"
+    <RelativeLayout
+        android:id="@+id/after_lading"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:background="#C3Cf51" >
+
+        <ImageView
+            android:id="@+id/result_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/result_jian" />
+
+        <Button
+            android:id="@+id/search_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="33dp"
+            android:background="@drawable/search_button"
+            android:onClick="clickSearchButton" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="33dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="SHIDAN HUANG"
+            android:textColor="@android:color/white"
+            android:textSize="50dp" />
+    </RelativeLayout>
 
 </RelativeLayout>
